// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon demo examples color 1`] = `
.glamor-0,
[data-glamor-0] {
  fill: coral;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="<IconSentimentSatisfied color=\\"coral\\" />"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "IconSentimentSatisfied": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "IconSentimentSatisfied": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <IconSentimentSatisfied
              color="coral"
            >
              <Icon
                color="coral"
                rtl={false}
                size="medium"
              >
                <glamorous(svg)
                  aria-hidden={true}
                  aria-labelledby={undefined}
                  color="coral"
                  role="icon"
                  rtl={false}
                  size="medium"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={undefined}
                    className="glamor-0"
                    color="coral"
                    role="icon"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="15.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <circle
                        cx="8.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                      />
                    </g>
                  </svg>
                </glamorous(svg)>
              </Icon>
            </IconSentimentSatisfied>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Icon demo examples custom 1`] = `
.glamor-0,
[data-glamor-0] {
  fill: #8e99ab;
  font-size: 16px;
  height: 7em;
  width: 7em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <Icon size=\\"7em\\" title=\\"CA Technologies\\">
      <svg viewBox=\\"0 0 16 16\\">
        <path
          className=\\"trademark\\"
          d=\\"M14.514 10.187c-0.256 0-0.419-0.186-0.419-0.442s0.186-0.442 0.419-0.442c0.256 0 0.419 0.186 0.419 0.442 0 0.279-0.163 0.442-0.419 0.442zM14.514 9.373c-0.209 0-0.372 0.14-0.372 0.395s0.163 0.372 0.372 0.372c0.209 0 0.372-0.14 0.372-0.372 0-0.256-0.163-0.395-0.372-0.395zM14.653 9.977l-0.14-0.209h-0.070v0.209h-0.093v-0.489h0.14c0.093 0 0.163 0.047 0.163 0.14 0 0.070-0.047 0.116-0.093 0.14l0.14 0.186-0.047 0.023zM14.514 9.582h-0.070v0.14h0.070c0.047 0 0.093-0.023 0.093-0.070s-0.023-0.070-0.093-0.070z\\"
        />
        <g className=\\"technologies\\">
          <path d=\\"M0.788 12.187v-0.465h0.349v0.465h0.279v0.279h-0.279v0.814c0 0.070 0.047 0.093 0.116 0.093 0.047 0 0.116-0.023 0.163-0.023v0.279c-0.093 0-0.186 0.023-0.279 0.023-0.256 0-0.349-0.116-0.349-0.326v-0.861h-0.186v-0.279h0.186z\\" />
          <path d=\\"M1.905 12.955c0 0.302 0.14 0.419 0.302 0.419s0.233-0.070 0.326-0.163l0.256 0.163c-0.14 0.209-0.326 0.302-0.605 0.302-0.372 0-0.605-0.279-0.605-0.744s0.233-0.744 0.605-0.744c0.372 0 0.582 0.326 0.582 0.651v0.116h-0.861zM2.44 12.722c0-0.209-0.116-0.302-0.279-0.302s-0.279 0.116-0.279 0.302h0.558z\\" />
          <path d=\\"M3.859 12.653c-0.047-0.116-0.116-0.209-0.279-0.209-0.186 0-0.279 0.14-0.279 0.465s0.093 0.465 0.279 0.465c0.14 0 0.233-0.093 0.302-0.233l0.256 0.14c-0.14 0.256-0.302 0.349-0.558 0.349-0.395 0-0.605-0.279-0.605-0.744s0.233-0.744 0.605-0.744c0.279 0 0.489 0.14 0.558 0.372l-0.279 0.14z\\" />
          <path d=\\"M4.394 13.607v-1.977h0.349v0.698c0.093-0.093 0.233-0.186 0.419-0.186 0.279 0 0.419 0.186 0.419 0.489v0.977h-0.349v-0.931c0-0.186-0.070-0.256-0.186-0.256-0.14 0-0.256 0.093-0.326 0.163v1.024h-0.326z\\" />
          <path d=\\"M5.906 13.607v-1.442h0.302v0.163c0.116-0.093 0.279-0.186 0.442-0.186 0.279 0 0.419 0.186 0.419 0.489v0.977h-0.349v-0.931c0-0.186-0.070-0.256-0.186-0.256-0.14 0-0.256 0.093-0.326 0.163v1.024h-0.302z\\" />
          <path d=\\"M7.953 12.164c0.395 0 0.628 0.279 0.628 0.744s-0.233 0.744-0.628 0.744c-0.395 0-0.628-0.279-0.628-0.744s0.233-0.744 0.628-0.744zM7.953 12.443c-0.186 0-0.279 0.14-0.279 0.465s0.093 0.465 0.279 0.465c0.186 0 0.279-0.14 0.279-0.465s-0.093-0.465-0.279-0.465z\\" />
          <path d=\\"M8.837 13.607v-1.977h0.349v1.977z\\" />
          <path d=\\"M10.070 12.164c0.395 0 0.628 0.279 0.628 0.744s-0.233 0.744-0.628 0.744c-0.395 0-0.628-0.279-0.628-0.744s0.233-0.744 0.628-0.744zM10.070 12.443c-0.186 0-0.279 0.14-0.279 0.465s0.093 0.465 0.279 0.465c0.186 0 0.279-0.14 0.279-0.465s-0.093-0.465-0.279-0.465z\\" />
          <path d=\\"M12.094 12.397c-0.070 0-0.163 0-0.209 0.023 0.047 0.070 0.070 0.14 0.070 0.256 0 0.279-0.186 0.465-0.535 0.465-0.14 0-0.256 0-0.256 0.093 0 0.233 0.931-0.093 0.931 0.489 0 0.209-0.209 0.419-0.651 0.419-0.372 0-0.628-0.116-0.628-0.349 0-0.186 0.14-0.256 0.256-0.256v0c-0.070-0.047-0.209-0.070-0.209-0.233 0-0.14 0.163-0.233 0.209-0.256-0.116-0.093-0.209-0.209-0.209-0.372 0-0.256 0.186-0.489 0.558-0.489 0.116 0 0.256 0.047 0.349 0.116 0.070-0.093 0.163-0.14 0.326-0.116v0.209zM11.094 13.746c0 0.116 0.093 0.163 0.372 0.163 0.209 0 0.302-0.116 0.302-0.163 0-0.070-0.093-0.163-0.419-0.163-0.209 0-0.256 0.116-0.256 0.163zM11.396 12.42c-0.14 0-0.256 0.093-0.256 0.233s0.093 0.233 0.256 0.233c0.14 0 0.233-0.116 0.233-0.233 0-0.14-0.093-0.233-0.233-0.233z\\" />
          <path d=\\"M12.327 11.932v-0.326h0.349v0.326h-0.349zM12.676 13.188v0.419h-0.349v-1.442h0.349v1.024z\\" />
          <path d=\\"M13.281 12.955c0 0.302 0.14 0.419 0.302 0.419s0.233-0.070 0.326-0.163l0.256 0.163c-0.14 0.209-0.326 0.302-0.605 0.302-0.372 0-0.605-0.279-0.605-0.744s0.233-0.744 0.628-0.744c0.372 0 0.582 0.326 0.582 0.651v0.116h-0.884zM13.816 12.722c0-0.209-0.116-0.302-0.279-0.302s-0.279 0.116-0.279 0.302h0.558z\\" />
          <path d=\\"M15.119 12.56c-0.070-0.070-0.163-0.14-0.256-0.14-0.14 0-0.186 0.047-0.186 0.14 0 0.256 0.721 0.14 0.721 0.675 0 0.302-0.233 0.419-0.512 0.419-0.233 0-0.419-0.093-0.535-0.279l0.233-0.163c0.070 0.116 0.186 0.209 0.326 0.209 0.116 0 0.209-0.070 0.209-0.163 0-0.233-0.721-0.163-0.721-0.651 0-0.256 0.233-0.419 0.465-0.419 0.186 0 0.372 0.070 0.512 0.209l-0.256 0.163z\\" />
        </g>
        <g className=\\"ca\\">
          <path d=\\"M10.838 8.14c-0.279 0.419-0.698 0.675-1.186 0.675-0.651 0-1.21-0.302-1.21-1.024 0-1.047 1.535-1.419 2.722-1.489v0.302c0 0.698 0 1.047-0.326 1.535zM8.651 4.348c0.186-0.489 0.651-0.675 1.303-0.675 0.931 0 1.186 0.651 1.21 1.186v0.256c-2.559 0.116-4.955 0.605-4.909 2.931 0.023 1.628 1.512 2.303 2.536 2.303 1.186 0 1.838-0.326 2.489-1.117 0 0.349 0.047 0.698 0.116 0.954h2.28c-0.116-0.395-0.163-0.814-0.163-1.21v-4.257c0-1.024-0.186-1.605-0.744-2.117-0.535-0.489-1.373-0.744-2.536-0.744-1.070 0-1.977 0.233-2.652 0.698v0c0.558 0.465 0.931 1.070 1.070 1.791v0z\\" />
          <path d=\\"M6.116 7.953c0 0.047 0 0.093 0 0.14 0 0.023 0 0.047 0 0.070 0.047 0.837 0.442 1.349 0.814 1.652-0.628 0.372-1.396 0.512-2.070 0.512-2.443 0.023-3.908-1.721-3.908-4.141 0-2.512 1.512-4.327 4.071-4.327 1.861 0 3.396 1 3.559 2.931h-2.233c0-0.744-0.512-1.117-1.233-1.117-1.163 0-1.512 0.814-1.512 2.326 0 1.535 0.326 2.419 1.512 2.419 0.442 0 0.791-0.14 1-0.465v0z\\" />
        </g>
      </svg>
    </Icon>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Icon": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Icon": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <Icon
              size="7em"
              title="CA Technologies"
            >
              <glamorous(svg)
                aria-hidden={null}
                aria-labelledby="Icon-title-9"
                role="icon"
                size="7em"
                viewBox="0 0 24 24"
              >
                <svg
                  aria-hidden={null}
                  aria-labelledby="Icon-title-9"
                  className="glamor-0"
                  role="icon"
                  viewBox="0 0 24 24"
                >
                  <title
                    id="Icon-title-9"
                  >
                    CA Technologies
                  </title>
                  <svg
                    viewBox="0 0 16 16"
                  >
                    <path
                      className="trademark"
                      d="M14.514 10.187c-0.256 0-0.419-0.186-0.419-0.442s0.186-0.442 0.419-0.442c0.256 0 0.419 0.186 0.419 0.442 0 0.279-0.163 0.442-0.419 0.442zM14.514 9.373c-0.209 0-0.372 0.14-0.372 0.395s0.163 0.372 0.372 0.372c0.209 0 0.372-0.14 0.372-0.372 0-0.256-0.163-0.395-0.372-0.395zM14.653 9.977l-0.14-0.209h-0.070v0.209h-0.093v-0.489h0.14c0.093 0 0.163 0.047 0.163 0.14 0 0.070-0.047 0.116-0.093 0.14l0.14 0.186-0.047 0.023zM14.514 9.582h-0.070v0.14h0.070c0.047 0 0.093-0.023 0.093-0.070s-0.023-0.070-0.093-0.070z"
                    />
                    <g
                      className="technologies"
                    >
                      <path
                        d="M0.788 12.187v-0.465h0.349v0.465h0.279v0.279h-0.279v0.814c0 0.070 0.047 0.093 0.116 0.093 0.047 0 0.116-0.023 0.163-0.023v0.279c-0.093 0-0.186 0.023-0.279 0.023-0.256 0-0.349-0.116-0.349-0.326v-0.861h-0.186v-0.279h0.186z"
                      />
                      <path
                        d="M1.905 12.955c0 0.302 0.14 0.419 0.302 0.419s0.233-0.070 0.326-0.163l0.256 0.163c-0.14 0.209-0.326 0.302-0.605 0.302-0.372 0-0.605-0.279-0.605-0.744s0.233-0.744 0.605-0.744c0.372 0 0.582 0.326 0.582 0.651v0.116h-0.861zM2.44 12.722c0-0.209-0.116-0.302-0.279-0.302s-0.279 0.116-0.279 0.302h0.558z"
                      />
                      <path
                        d="M3.859 12.653c-0.047-0.116-0.116-0.209-0.279-0.209-0.186 0-0.279 0.14-0.279 0.465s0.093 0.465 0.279 0.465c0.14 0 0.233-0.093 0.302-0.233l0.256 0.14c-0.14 0.256-0.302 0.349-0.558 0.349-0.395 0-0.605-0.279-0.605-0.744s0.233-0.744 0.605-0.744c0.279 0 0.489 0.14 0.558 0.372l-0.279 0.14z"
                      />
                      <path
                        d="M4.394 13.607v-1.977h0.349v0.698c0.093-0.093 0.233-0.186 0.419-0.186 0.279 0 0.419 0.186 0.419 0.489v0.977h-0.349v-0.931c0-0.186-0.070-0.256-0.186-0.256-0.14 0-0.256 0.093-0.326 0.163v1.024h-0.326z"
                      />
                      <path
                        d="M5.906 13.607v-1.442h0.302v0.163c0.116-0.093 0.279-0.186 0.442-0.186 0.279 0 0.419 0.186 0.419 0.489v0.977h-0.349v-0.931c0-0.186-0.070-0.256-0.186-0.256-0.14 0-0.256 0.093-0.326 0.163v1.024h-0.302z"
                      />
                      <path
                        d="M7.953 12.164c0.395 0 0.628 0.279 0.628 0.744s-0.233 0.744-0.628 0.744c-0.395 0-0.628-0.279-0.628-0.744s0.233-0.744 0.628-0.744zM7.953 12.443c-0.186 0-0.279 0.14-0.279 0.465s0.093 0.465 0.279 0.465c0.186 0 0.279-0.14 0.279-0.465s-0.093-0.465-0.279-0.465z"
                      />
                      <path
                        d="M8.837 13.607v-1.977h0.349v1.977z"
                      />
                      <path
                        d="M10.070 12.164c0.395 0 0.628 0.279 0.628 0.744s-0.233 0.744-0.628 0.744c-0.395 0-0.628-0.279-0.628-0.744s0.233-0.744 0.628-0.744zM10.070 12.443c-0.186 0-0.279 0.14-0.279 0.465s0.093 0.465 0.279 0.465c0.186 0 0.279-0.14 0.279-0.465s-0.093-0.465-0.279-0.465z"
                      />
                      <path
                        d="M12.094 12.397c-0.070 0-0.163 0-0.209 0.023 0.047 0.070 0.070 0.14 0.070 0.256 0 0.279-0.186 0.465-0.535 0.465-0.14 0-0.256 0-0.256 0.093 0 0.233 0.931-0.093 0.931 0.489 0 0.209-0.209 0.419-0.651 0.419-0.372 0-0.628-0.116-0.628-0.349 0-0.186 0.14-0.256 0.256-0.256v0c-0.070-0.047-0.209-0.070-0.209-0.233 0-0.14 0.163-0.233 0.209-0.256-0.116-0.093-0.209-0.209-0.209-0.372 0-0.256 0.186-0.489 0.558-0.489 0.116 0 0.256 0.047 0.349 0.116 0.070-0.093 0.163-0.14 0.326-0.116v0.209zM11.094 13.746c0 0.116 0.093 0.163 0.372 0.163 0.209 0 0.302-0.116 0.302-0.163 0-0.070-0.093-0.163-0.419-0.163-0.209 0-0.256 0.116-0.256 0.163zM11.396 12.42c-0.14 0-0.256 0.093-0.256 0.233s0.093 0.233 0.256 0.233c0.14 0 0.233-0.116 0.233-0.233 0-0.14-0.093-0.233-0.233-0.233z"
                      />
                      <path
                        d="M12.327 11.932v-0.326h0.349v0.326h-0.349zM12.676 13.188v0.419h-0.349v-1.442h0.349v1.024z"
                      />
                      <path
                        d="M13.281 12.955c0 0.302 0.14 0.419 0.302 0.419s0.233-0.070 0.326-0.163l0.256 0.163c-0.14 0.209-0.326 0.302-0.605 0.302-0.372 0-0.605-0.279-0.605-0.744s0.233-0.744 0.628-0.744c0.372 0 0.582 0.326 0.582 0.651v0.116h-0.884zM13.816 12.722c0-0.209-0.116-0.302-0.279-0.302s-0.279 0.116-0.279 0.302h0.558z"
                      />
                      <path
                        d="M15.119 12.56c-0.070-0.070-0.163-0.14-0.256-0.14-0.14 0-0.186 0.047-0.186 0.14 0 0.256 0.721 0.14 0.721 0.675 0 0.302-0.233 0.419-0.512 0.419-0.233 0-0.419-0.093-0.535-0.279l0.233-0.163c0.070 0.116 0.186 0.209 0.326 0.209 0.116 0 0.209-0.070 0.209-0.163 0-0.233-0.721-0.163-0.721-0.651 0-0.256 0.233-0.419 0.465-0.419 0.186 0 0.372 0.070 0.512 0.209l-0.256 0.163z"
                      />
                    </g>
                    <g
                      className="ca"
                    >
                      <path
                        d="M10.838 8.14c-0.279 0.419-0.698 0.675-1.186 0.675-0.651 0-1.21-0.302-1.21-1.024 0-1.047 1.535-1.419 2.722-1.489v0.302c0 0.698 0 1.047-0.326 1.535zM8.651 4.348c0.186-0.489 0.651-0.675 1.303-0.675 0.931 0 1.186 0.651 1.21 1.186v0.256c-2.559 0.116-4.955 0.605-4.909 2.931 0.023 1.628 1.512 2.303 2.536 2.303 1.186 0 1.838-0.326 2.489-1.117 0 0.349 0.047 0.698 0.116 0.954h2.28c-0.116-0.395-0.163-0.814-0.163-1.21v-4.257c0-1.024-0.186-1.605-0.744-2.117-0.535-0.489-1.373-0.744-2.536-0.744-1.070 0-1.977 0.233-2.652 0.698v0c0.558 0.465 0.931 1.070 1.070 1.791v0z"
                      />
                      <path
                        d="M6.116 7.953c0 0.047 0 0.093 0 0.14 0 0.023 0 0.047 0 0.070 0.047 0.837 0.442 1.349 0.814 1.652-0.628 0.372-1.396 0.512-2.070 0.512-2.443 0.023-3.908-1.721-3.908-4.141 0-2.512 1.512-4.327 4.071-4.327 1.861 0 3.396 1 3.559 2.931h-2.233c0-0.744-0.512-1.117-1.233-1.117-1.163 0-1.512 0.814-1.512 2.326 0 1.535 0.326 2.419 1.512 2.419 0.442 0 0.791-0.14 1-0.465v0z"
                      />
                    </g>
                  </svg>
                </svg>
              </glamorous(svg)>
            </Icon>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Icon demo examples icon 1`] = `
.glamor-0,
[data-glamor-0] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="<IconSentimentSatisfied />"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "IconSentimentSatisfied": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "IconSentimentSatisfied": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <IconSentimentSatisfied>
              <Icon
                rtl={false}
                size="medium"
              >
                <glamorous(svg)
                  aria-hidden={true}
                  aria-labelledby={undefined}
                  role="icon"
                  rtl={false}
                  size="medium"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={undefined}
                    className="glamor-0"
                    role="icon"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="15.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <circle
                        cx="8.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                      />
                    </g>
                  </svg>
                </glamorous(svg)>
              </Icon>
            </IconSentimentSatisfied>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Icon demo examples rtl 1`] = `
.glamor-0,
[data-glamor-0] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1em;
  transform: scaleX(-1);
  width: 1em;
  -webkit-transform: scaleX(-1);
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <ThemeProvider theme={{ direction: 'rtl' }}>
      <IconHelp />
    </ThemeProvider>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "IconHelp": [Function],
          "ThemeProvider": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "IconHelp": [Function],
            "ThemeProvider": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <ThemeProvider
              theme={
                Object {
                  "direction": "rtl",
                }
              }
            >
              <ThemeProvider
                theme={
                  Object {
                    "direction": "rtl",
                  }
                }
              >
                <IconHelp>
                  <Icon
                    rtl={true}
                    size="medium"
                  >
                    <glamorous(svg)
                      aria-hidden={true}
                      aria-labelledby={undefined}
                      role="icon"
                      rtl={true}
                      size="medium"
                      viewBox="0 0 24 24"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={undefined}
                        className="glamor-0"
                        role="icon"
                        viewBox="0 0 24 24"
                      >
                        <g>
                          <path
                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                          />
                        </g>
                      </svg>
                    </glamorous(svg)>
                  </Icon>
                </IconHelp>
              </ThemeProvider>
            </ThemeProvider>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Icon demo examples sizes 1`] = `
.glamor-1,
[data-glamor-1] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.glamor-0,
[data-glamor-0] {
  fill: #8e99ab;
  font-size: 16px;
  height: 0.75em;
  width: 0.75em;
}

.glamor-2,
[data-glamor-2] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1.25em;
  width: 1.25em;
}

.glamor-3,
[data-glamor-3] {
  fill: #8e99ab;
  font-size: 16px;
  height: 7em;
  width: 7em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="
    <div>
      <IconSentimentSatisfied size=\\"small\\" />
      <IconSentimentSatisfied />
      <IconSentimentSatisfied size=\\"large\\" />
      <IconSentimentSatisfied size=\\"7em\\" />
    </div>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "IconSentimentSatisfied": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "IconSentimentSatisfied": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <div>
              <IconSentimentSatisfied
                size="small"
              >
                <Icon
                  rtl={false}
                  size="small"
                >
                  <glamorous(svg)
                    aria-hidden={true}
                    aria-labelledby={undefined}
                    role="icon"
                    rtl={false}
                    size="small"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={undefined}
                      className="glamor-0"
                      role="icon"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="15.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <circle
                          cx="8.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <path
                          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                        />
                      </g>
                    </svg>
                  </glamorous(svg)>
                </Icon>
              </IconSentimentSatisfied>
              <IconSentimentSatisfied>
                <Icon
                  rtl={false}
                  size="medium"
                >
                  <glamorous(svg)
                    aria-hidden={true}
                    aria-labelledby={undefined}
                    role="icon"
                    rtl={false}
                    size="medium"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={undefined}
                      className="glamor-1"
                      role="icon"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="15.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <circle
                          cx="8.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <path
                          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                        />
                      </g>
                    </svg>
                  </glamorous(svg)>
                </Icon>
              </IconSentimentSatisfied>
              <IconSentimentSatisfied
                size="large"
              >
                <Icon
                  rtl={false}
                  size="large"
                >
                  <glamorous(svg)
                    aria-hidden={true}
                    aria-labelledby={undefined}
                    role="icon"
                    rtl={false}
                    size="large"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={undefined}
                      className="glamor-2"
                      role="icon"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="15.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <circle
                          cx="8.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <path
                          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                        />
                      </g>
                    </svg>
                  </glamorous(svg)>
                </Icon>
              </IconSentimentSatisfied>
              <IconSentimentSatisfied
                size="7em"
              >
                <Icon
                  rtl={false}
                  size="7em"
                >
                  <glamorous(svg)
                    aria-hidden={true}
                    aria-labelledby={undefined}
                    role="icon"
                    rtl={false}
                    size="7em"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={undefined}
                      className="glamor-3"
                      role="icon"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <circle
                          cx="15.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <circle
                          cx="8.5"
                          cy="9.5"
                          r="1.5"
                        />
                        <path
                          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                        />
                      </g>
                    </svg>
                  </glamorous(svg)>
                </Icon>
              </IconSentimentSatisfied>
            </div>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Icon demo examples title 1`] = `
.glamor-0,
[data-glamor-0] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_activeMuted": "#f79999",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_activeMuted": "#95f5c3",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_activeMuted": "#fab69d",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#4a89e8",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#164ea8",
        "borderColor_hover": "#2e6fd9",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.1875em",
        "color_black": "#1d1f24",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_danger_active": "#940909",
        "color_text_danger_focus": "#ad0e0e",
        "color_text_danger_hover": "#c71818",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#164ea8",
        "color_text_primary_active": "#114091",
        "color_text_primary_focus": "#164ea8",
        "color_text_primary_hover": "#1f5dc2",
        "color_text_success": "#06783f",
        "color_text_success_active": "#046132",
        "color_text_success_focus": "#06783f",
        "color_text_success_hover": "#0a8f4c",
        "color_text_warning": "#bd3909",
        "color_text_warning_active": "#a83207",
        "color_text_warning_focus": "#bd3909",
        "color_text_warning_hover": "#cf4615",
        "color_theme_10": "#e6eefc",
        "color_theme_100": "#0f397d",
        "color_theme_20": "#c2dbfc",
        "color_theme_30": "#9dc2fa",
        "color_theme_40": "#72a5f2",
        "color_theme_50": "#4a89e8",
        "color_theme_60": "#2e6fd9",
        "color_theme_70": "#1f5dc2",
        "color_theme_80": "#164ea8",
        "color_theme_90": "#114091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 16,
        "fontSize_h1": "2.125em",
        "fontSize_h2": "1.75em",
        "fontSize_h3": "1.375em",
        "fontSize_h4": "1.125em",
        "fontSize_h5": "0.875em",
        "fontSize_h6": "0.875em",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 1px 2px 0 rgba(0,0,0,0.4)",
        "shadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.4)",
        "shadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.4)",
        "shadow_5": "0 24px 24px -8px rgba(0,0,0,0.4), 0 8px 16px 0 rgba(0,0,0,0.4)",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="<IconSentimentSatisfied title=\\"smiley-face\\" />"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "IconSentimentSatisfied": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "IconSentimentSatisfied": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <IconSentimentSatisfied
              title="smiley-face"
            >
              <Icon
                rtl={false}
                size="medium"
                title="smiley-face"
              >
                <glamorous(svg)
                  aria-hidden={null}
                  aria-labelledby="Icon-title-7"
                  role="icon"
                  rtl={false}
                  size="medium"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden={null}
                    aria-labelledby="Icon-title-7"
                    className="glamor-0"
                    role="icon"
                    viewBox="0 0 24 24"
                  >
                    <title
                      id="Icon-title-7"
                    >
                      smiley-face
                    </title>
                    <g>
                      <circle
                        cx="15.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <circle
                        cx="8.5"
                        cy="9.5"
                        r="1.5"
                      />
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
                      />
                    </g>
                  </svg>
                </glamorous(svg)>
              </Icon>
            </IconSentimentSatisfied>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
